--- a/grocery-list/src/app/core/header/header.component.html
+++ b/grocery-list/src/app/core/header/header.component.html
@@ -1,3 +1,6 @@
 <header>
-  header
+<!--  <button mat-button [matMenuTriggerFor]="afterMenu" class="button-text">Produkty</button>-->
+<!--  <mat-menu #afterMenu="matMenu" xPosition="after">-->
+    <a mat-menu-item routerLink="/product" routerLinkActive="active">Produkty</a>
+<!--  </mat-menu>-->
 </header>
