--- a/grocery-list/src/app/core/footer/footer.component.css
+++ b/grocery-list/src/app/core/footer/footer.component.css
@@ -1,6 +1,5 @@
 .footer {
   padding: 20px;
-  font-size: 12px;
   background: #3f51b5;
   color: #fff;
   position: fixed;
@@ -8,4 +7,8 @@
   bottom: 0;
   width: 100%;
   text-align: center;
+  font-size: 0.7rem;
+  font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 3px;
 }
